--- a/inclass-05.2/w08ice/ice08.html
+++ b/inclass-05.2/w08ice/ice08.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="first">
-            <img class = "firstimage"src="images/deltalogo.png" alt=" delta logo">
+            <img class = "firstimage"src=Images/deltalogo.png" alt=" delta logo">
             <p>Mobile Boarding Pass</p>
             <p>Gabby Salamone</p>
         </section>
@@ -21,7 +21,7 @@
                 <p> DEN</p>
                 <p> Denver</p>
             </div> 
-            <div class="route"><img class="flight" src="images/flighticon.png" alt="flight icon">
+            <div class="route"><img class="flight" src="Images/flighticon.png" alt="flight icon">
             </div>
                
             <div id="arival">
@@ -63,7 +63,7 @@
             </div>
         </section>
         <section id="fourth">
-            <img src="images/barcode.PNG" alt="barcode">
+            <img src="Images/barcode.PNG" alt="barcode">
             <p>Thank you for flying with Delta!</p>
         </section>
 
