--- a/inclass-05.2/w08ice/ice08.html
+++ b/inclass-05.2/w08ice/ice08.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="first">
-            <img class = "firstimage"src=Images/deltalogo.png" alt=" delta logo">
+            <img class = "firstimage"src="Images/deltalogo.png" alt=" delta logo">
             <p>Mobile Boarding Pass</p>
             <p>Gabby Salamone</p>
         </section>
