--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,7 +32,7 @@
                    </div>
             </section>
     </div> 
-    <main class="home grid" >
+    <main class="home-grid" >
         <section class="rivers-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
