--- a/Malvernandmalcolm/page2.html
+++ b/Malvernandmalcolm/page2.html
@@ -5,20 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MalvernandMalcolm</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
+    <header><div class="link">
         <a id="logo_link" href="index.html">
-       <div><img src="images/sewingmachine.jpg" alt="sewingmachine">
+       <div><img class="sewing" src="images/sewingmachine.jpg" alt="sewingmachine"></div></a>
         <h1> MalvernandMalcolm</h1>
-        <img src="images/sewingmachine.jpg" alt="sewingmachine">
-       </a>
-       </div>
+        <img class="sewing" src="images/sewingmachine.jpg" alt="sewingmachine"></div>
+       
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="page2.html">Page 2</a>
+            <a href="page3.html">Page 3</a>
+        </nav>
     </header>
     <main>
         <section>
          <h1>CUSTOMER SERVICES AND COLLECTIONS</h1>
-         <img class="cmonstera" src="images/cmonstera.jpg" alt="cmonstera">
+         <img class="cmonstera" src="images/cmonstera-min.jpg" alt="cmonstera">
         </section>
         <section>
             <h1>BRAND QUALITY AND DESIGN</h2>
@@ -26,11 +31,11 @@
                 <h3>SERVICES OFFERED</h3>
                 <p>We also consider that your choice is our primary responsibility to fulfill and provide even door to door delivery in the case that you are also purchasing our products online or you want them to be delivered by your doorstep. If you further scroll down the screen, we offer shipping for those of you who would love your products to be shipped to your dear friends and relatives we offer those services with affordable prices.This is a free online site and comes with an option to create an account to become a member of our loyal customers and MalvernandMalcolm will offer a big 20% off for subscribing to the mailing list so that the company can send you emails about special offers and new products. They will be a survey come end of the month which in turn we will be asking a few questions about the overall service you have received throughout the month, and it will also allow you customers the chance to suggest improvements the members of staff can work on in order to be efficient in our line of work. In having a survey, the site will also come with a wide range of online customer assistant guide which you can always send a text to as the site will give you an option to chat with one of our members of staff to help you navigate around the site and help you out with process of even making a payment. After doing all your shopping in the end, this site comes with a customer reviews section as we believe that our customers opinions and feelings about our site can help our website become the best as we are open to suggestions and change as well.
                 </p>
-                <img c;ass="Customers" src="images/Customers.jpg" alt="customers">
+                <img class="Customers" src="images/Customers-min.jpg" alt="customers">
         </section>
      </main>
     <footer>
-       <p>CONTACT DETAILS</p>
+       <h3>CONTACT DETAILS</h3>
        <div class="social">
     <a href="https://facebook.com" target="blank">
        <img src="images/facebook.png" alt="facebook">
@@ -44,11 +49,7 @@
        </div>
     
        <p>MALVERNANDMALCOLM PVT LIMITED</p>
-       <nav>
-        <a href="index.html">Home</a>
-        <a href=Page2.html>Page 2</a>
-        <a href=Page3.html>Page 3</a>
-    </nav>
+
     </footer>
 </body>
 </html>
