with css images

--- a/Malvernandmalcolm/index.html
+++ b/Malvernandmalcolm/index.html
@@ -10,9 +10,9 @@
 <body>
     <header><div class="link">
         <a id="logo_link" href="index.html">
-       <div><img class="sewing" src="images/sewingmachine.jpg" alt="sewingmachine"></div></a>
+       <div><img class="sewing" src="Images/sewingmachine.jpg" alt="sewingmachine"></div></a>
         <h1> MalvernandMalcolm</h1>
-        <img class="sewing" src="images/sewingmachine.jpg" alt="sewingmachine"></div>
+        <img class="sewing" src="Images/sewingmachine.jpg" alt="sewingmachine"></div>
        
        <nav>
         <a href="index.html">Home</a>
@@ -30,23 +30,23 @@
         <section>
     <h3>GOALS</h3>
     <p>"MalvernandMalcolm aims to provide the highest value trendy pieces while also being dedicated to quality, value and service”, as per the vision statement of the company.</p>
-    <img class="Beginning" src="images/Beginning-min.jpg" alt="Beginning">
+    <img class="Beginning" src="Images/Beginning-min.jpg" alt="Beginning">
     <h4>VISION STATEMENT</h4>
     <p>To innovate, to lead, to enhance, to provide best-value products and services to global customers. To make a difference through our branding to stay ahead of fashion trends, market changes and the latest technology. To enhance the quality of life for our business partners, customers and employees.</p>
-    <img class="designer" src="images/designer-min.jpg" alt="designer">
+    <img class="designer" src="Images/designer-min.jpg" alt="designer">
         </section>
      </main>
     <footer>
        <h3>CONTACT DETAILS</h3>
        <div class="social">
     <a href="https://facebook.com" target="blank">
-       <img src="images/facebook.png" alt="facebook">
+       <img src="Images/facebook.png" alt="facebook">
     </a>
     <a href="https://twitter.com" target="blank">
-        <img src="images/twitter.png" alt="twitter icon">
+        <img src="Images/twitter.png" alt="twitter icon">
     </a>
     <a href="https://instagram.com" target="blank">  
-       <img class src="images/instagram.png" alt="instagram">
+       <img class src="Images/instagram.png" alt="instagram">
     </a>
        </div>
     
