--- a/Malvernandmalcolm/page3.html
+++ b/Malvernandmalcolm/page3.html
@@ -11,9 +11,9 @@
     <header>
         <div class="link">
             <a id="logo_link" href="index.html">
-           <div><img class="sewing" src="images/sewingmachine.jpg" alt="sewingmachine"></div></a>
+           <div><img class="sewing" src="Images/sewingmachine.jpg" alt="sewingmachine"></div></a>
             <h1> MalvernandMalcolm</h1>
-            <img class="sewing" src="images/sewingmachine.jpg" alt="sewingmachine"></div>
+            <img class="sewing" src="Images/sewingmachine.jpg" alt="sewingmachine"></div>
            
             <nav>
                 <a href="index.html">Home</a>
@@ -30,26 +30,26 @@
                 <input type="text" placeholder="Search..">
               </div>
             <h1>NEW ARRIVALS</h1>
-            <img class="Arrivals" src="images/Arrivals-min.jpg" alt="Arrivals">
+            <img class="Arrivals" src="Images/Arrivals-min.jpg" alt="Arrivals">
         </section>
         <section>
             <h2>NEW PRODUCTS COMING IN</h2>
             <p>New arrivals, now dropping in five days a week including big high quality products such as tuxedos, pantsuit and blazers will be seen the minute one opens our site to give you a wide variety of options to choose from as they come in vast amount of colors. We already have some of our products tried out and worn by different models and celebrities to showcase how legit we are when it comes to offering the best clothes in town. There is also an add to cart button below to allow you to shop several your products.
             </p>
-            <img class="Bohle" src="images/Bohle-min.jpg" alt="Bohle">
+            <img class="Bohle" src="Images/Bohle-min.jpg" alt="Bohle">
         </section>
      </main>
     <footer>
        <h3>CONTACT DETAILS</h3>
        <div class="social">
     <a href="https://facebook.com" target="blank">
-       <img src="images/facebook.png" alt="facebook">
+       <img src="Images/facebook.png" alt="facebook">
     </a>
     <a href="https://twitter.com" target="blank">
-        <img src="images/twitter.png" alt="twitter icon">
+        <img src="Images/twitter.png" alt="twitter icon">
     </a>
     <a href="https://instagram.com" target="blank">  
-       <img src="images/instagram.png" alt="instagram">
+       <img src="Images/instagram.png" alt="instagram">
     </a>
        </div>
     
