--- a/Malvernandmalcolm/page2.html
+++ b/Malvernandmalcolm/page2.html
@@ -22,6 +22,12 @@
     </header>
     <main>
         <section>
+            <div class="topnav">
+                <a class="active" href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+                <input type="text" placeholder="Search..">
+              </div>
          <h1>CUSTOMER SERVICES AND COLLECTIONS</h1>
          <img class="cmonstera" src="Images/cmonstera-min.jpg" alt="cmonstera">
         </section>
