--- a/Malvernandmalcolm/page2.html
+++ b/Malvernandmalcolm/page2.html
@@ -20,7 +20,7 @@
             <a href="page3.html">Page 3</a>
         </nav>
     </header>
-    <main>
+    <main class="fashion">
         <section>
             <div class="topnav">
                 <a class="active" href="#home">Home</a>
