--- a/Malvernandmalcolm/index.html
+++ b/Malvernandmalcolm/index.html
@@ -14,24 +14,20 @@
         <h1> MalvernandMalcolm</h1>
         <img class="sewing" src="Images/sewingmachine.jpg" alt="sewingmachine"></div>
        
-       <nav>
-        <a href="index.html">Home</a>
-        <a href="page2.html">Page 2</a>
-        <a href="page3.html">Page 3</a>
-    </nav>
+       
        </div>
     </header>
     <main>
         <section>
             <div class="topnav">
-                <a class="active" href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+                <a class="active" href="#Home">Home</a>
+                <a href="page2.html">Page 2</a>
+                <a href="page3.html">Page 3</a>
                 <input type="text" placeholder="Search..">
               </div>
 
     <h2>BIOGRAPHY OF THE COMPANY</h2>
-    <p>MalvernandMalcolm is a fashion company run and owned by Freedom Potera and was founded in 2008.Its focused on both men’s and women's wear as well as clothes for children, bags, shoes and accessories are some other categories of apparel that MalvernandMalcolm houses. 
+    <p class="intro">MalvernandMalcolm is a fashion company run and owned by Freedom Potera and was founded in 2008.Its focused on both men’s and women's wear as well as clothes for children, bags, shoes and accessories are some other categories of apparel that MalvernandMalcolm houses. 
         <p class="italic">Be it tuxedos, patterned blouses, slim ties, waist coats or boots for women</p>
         <p> MalvernandMalcolm has something for everyone. Started as a small backyard community effort to cloth women and men who had no clothes to put on Freedom Potera became inspired not to only cloth those who did not have clothes but rather create a business that serves both her community and even a large-scale community and now even offer online surfaces globally so as to empower her brand.</p>
         </section>
