--- a/Malvernandmalcolm/page3.html
+++ b/Malvernandmalcolm/page3.html
@@ -15,18 +15,14 @@
             <h1> MalvernandMalcolm</h1>
             <img class="sewing" src="Images/sewingmachine.jpg" alt="sewingmachine"></div>
            
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="page2.html">Page 2</a>
-                <a href="page3.html">Page 3</a>
-            </nav>
+           
     </header>
     <main>
         <section>
             <div class="topnav">
-                <a class="active" href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+                <a class="index.html" href="index.html">Home</a>
+                <a href="page2.html">Page 2</a>
+                <a href="page3.html">Page 3</a>
                 <input type="text" placeholder="Search..">
               </div>
             <h1>NEW ARRIVALS</h1>
