--- a/Malvernandmalcolm/index.html
+++ b/Malvernandmalcolm/index.html
@@ -18,7 +18,7 @@
        
        </div>
     </header>
-    <main>
+    <main class="sew">
         <section>
             <div class="topnav">
                 <a class="active" href="#Home">Home</a>
