--- a/Malvernandmalcolm/page3.html
+++ b/Malvernandmalcolm/page3.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MalvernandMalcolm</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
            
            
     </header>
-    <main>
+    <main class="sew">
         <section>
             <div class="topnav">
                 <a class="index.html" href="index.html">Home</a>
