--- a/Malvernandmalcolm/index.html
+++ b/Malvernandmalcolm/index.html
@@ -57,7 +57,7 @@
        <div class="social">
         <p>MALVERNANDMALCOLM PVT LIMITED</p>
         <p>=1 208 6038706</p>
-       <p>https://mal-prog.github.io/Malvernandmalcolm/site-plan.html</p> 
+       <p class=>https://mal-prog.github.io/Malvernandmalcolm/site-plan.html</p> 
     </div>
       
     </footer>
