--- a/Malvernandmalcolm/site-plan.html
+++ b/Malvernandmalcolm/site-plan.html
@@ -134,8 +134,8 @@
         To innovate, to lead, to enhance, to provide best-value products and services to global customers. To make a difference through our branding to stay ahead of fashion trends, market changes and the latest technology. To enhance the quality of life for our business partners, customers and employees.
       </p>
       <p>Images for the Home page</p>
-        <img src="Images/Beginning.jpg" alt="Beginning">
-        <img src="Images/designer.jpg" alt="designer">
+        <img src="Images/Beginning-min.jpg" alt="Beginning-min">
+        <img src="Images/designer-min.jpg" alt="designer-min">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -146,8 +146,8 @@
          We also consider that your choice is our primary responsibility to fulfill and provide even door to door delivery in the case that you are also purchasing our products online or you want them to be delivered by your doorstep. If you further scroll down the screen, we offer shipping for those of you who would love your products to be shipped to your dear friends and relatives we offer those services with affordable prices.This is a free online site and comes with an option to create an account to become a member of our loyal customers and MalvernandMalcolm will offer a big 20% off for subscribing to the mailing list so that the company can send you emails about special offers and new products. They will be a survey come end of the month which in turn we will be asking a few questions about the overall service you have received throughout the month, and it will also allow you customers the chance to suggest improvements the members of staff can work on in order to be efficient in our line of work. In having a survey, the site will also come with a wide range of online customer assistant guide which you can always send a text to as the site will give you an option to chat with one of our members of staff to help you navigate around the site and help you out with process of even making a payment. After doing all your shopping in the end, this site comes with a customer reviews section as we believe that our customers opinions and feelings about our site can help our website become the best as we are open to suggestions and change as well.
       </p>
       <p>Images for the Page 2</p>
-        <img src="Images/cmonstera.jpg" alt="cmonstera">
-        <img src="Images/Customers.jpg" alt="Customers">
+        <img src="Images/cmonstera-min.jpg" alt="cmonstera-min">
+        <img src="Images/Customers-min.jpg" alt="Customers-min">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -156,8 +156,8 @@
          New arrivals, now dropping in five days a week including big high quality products such as tuxedos, pantsuit and blazers will be seen the minute one opens our site to give you a wide variety of options to choose from as they come in vast amount of colors. We already have some of our products tried out and worn by different models and celebrities to showcase how legit we are when it comes to offering the best clothes in town. There is also an add to cart button below to allow you to shop several your products.
          </p>
       <p>Images for the Page 3</p>
-        <img src="Images/Arrivals.jpg" alt="Arrivals">
-        <img src="Images/Bohle.jpg" alt="Bohle">
+        <img src="Images/Arrivals-min.jpg" alt="Arrivals-min">
+        <img src="Images/Bohle-min.jpg" alt="Bohle-min">
 
       
       </ul>
